Set min-height to prevent break in welsh

--- a/app/assets/stylesheets/components/_home_feature.scss
+++ b/app/assets/stylesheets/components/_home_feature.scss
@@ -95,7 +95,7 @@
     li {
       @include column(3);
       padding: 0;
-      min-height: 150px;
+      min-height: 10rem;
       margin-bottom: 0;
     }
   }
